...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/accepted_cards_margin_top"
            android:orientation="vertical">

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/cardholder_name"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_name"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="customer_name" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/address_one_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_address_one"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_address_one"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="address_one" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/address_two_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_address_two"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_address_two"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="address_two" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_city"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_city"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="city" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/state_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_state"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_state"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="state" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/zipcode_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:hint="@string/placeholder_postcode"
                app:errorTextAppearance="@style/Error"
                app:error_text="@string/error_postcode"
                app:ime_options="flagNoExtractUi|actionNext"
                app:input_type="text"
                app:strategy_key="postcode" />

            <Spinner
                android:id="@+id/country_input"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:descendantFocusability="beforeDescendants"
...
                android:nextFocusForward="@+id/address_one_input"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:popupBackground="@color/spinner_background" />

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_phone"
...
                    android:gravity="center"
                    android:text="@string/button_clear"
                    android:textAllCaps="false" />


                <Button
                    android:id="@+id/done_button"
                    style="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:height="@dimen/button_height"
...
