<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/title_card_details" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accepted_card_helper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/accepted_cards_margin_top"
                    android:paddingLeft="@dimen/accepted_cards_margin_side"
                    android:paddingRight="@dimen/accepted_cards_margin_side"
                    android:text="@string/label_accepted_cards"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="@dimen/label_text_size" />

            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/card_icons_flexbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/cards_icon_view_margin_side"
                android:paddingRight="@dimen/cards_icon_view_margin_side"
                app:flexWrap="wrap" />

            <com.checkout.sdk.cardinput.CardInput
                android:id="@+id/card_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_card_number"
                android:nextFocusForward="@+id/month_input"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/Error" />


            <TextView
                android:id="@+id/date_helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/accepted_cards_margin_top"
                android:paddingLeft="@dimen/expiration_date_margin_side"
                android:paddingRight="@dimen/expiration_date_margin_side"
                android:text="@string/label_expiration_date"
                android:textColor="?attr/colorControlNormal"
                android:textSize="@dimen/label_text_size" />

            <LinearLayout
                android:id="@+id/date_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/date_margin_bottom"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:orientation="horizontal">

                <com.checkout.sdk.monthinput.MonthInput
                    android:id="@+id/month_input"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:paddingLeft="0dp"
                    android:layout_height="@dimen/basic_field_height"
                    android:layout_marginEnd="@dimen/basic_field_margin_side"
                    android:layout_marginRight="@dimen/basic_field_margin_side"
                    android:layout_weight="1"
                    android:focusable="true"
                    app:errorEnabled="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:nextFocusDown="@id/year_input"
                    android:nextFocusForward="@+id/year_input"
                    android:popupBackground="@color/spinner_background"
                    tools:ignore="RtlSymmetry" />

                <com.checkout.sdk.yearinput.YearInput
                    android:id="@+id/year_input"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_field_height"
                    android:layout_marginLeft="@dimen/basic_field_margin_side"
                    android:layout_marginStart="@dimen/basic_field_margin_side"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:nextFocusDown="@id/card_input"
                    android:popupBackground="@color/spinner_background" />

            </LinearLayout>

            <com.checkout.sdk.uicommon.TextInputView
                android:id="@+id/cvv_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:hint="@string/placeholder_cvv"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/Error"
                app:strategy_key="cvv"
                app:error_text="@string/error_cvv"
                app:ime_options="flagNoExtractUi|actionDone"
                app:digits="0123456789"
                app:input_type="number"
                app:max_length="4" />

            <TextView
                android:id="@+id/billing_helper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/accepted_cards_margin_side"
                android:paddingRight="@dimen/accepted_cards_margin_side"
                android:text="@string/label_billing_details"
                android:textColor="?attr/colorControlNormal"
                android:textSize="@dimen/expiration_date_text_size" />

            <com.checkout.sdk.input.BillingInput
                android:id="@+id/go_to_billing"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_field_height"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:popupBackground="@color/spinner_background" />

            <Button
                android:id="@+id/pay_button"
                style="@style/ThemeOverlay.AppCompat.Dark"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin_top"
                android:paddingTop="@dimen/button_padding_vertical"
                android:paddingBottom="@dimen/button_padding_vertical"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:height="@dimen/button_height"
                android:background="@drawable/pay_button_background"
                android:focusable="true"
                android:text="@string/button_pay"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/pay_button_text" />

        </LinearLayout>

    </ScrollView>

</merge>
