...
    <string name="cko_error_expiration_date">Enter a valid date</string>
    <string name="cko_placeholder_cvv">Cvv*</string>
    <string name="cko_error_cvv">Enter a valid Cvv</string>
    <string name="cko_label_billing_details">Billing Details</string>
    <string name="cko_select_billing_details">SELECT</string>
    <string name="cko_billing_details_add"> + ADD</string>
    <string name="cko_button_pay">Pay</string>
    <string name="cko_title_billing_details">Billing Details</string>
    <string name="cko_placeholder_name">Cardholder\'s name*</string>
    <string name="cko_error_name">Value must be longer then 3 characters</string>
    <string name="cko_placeholder_country"> SELECT COUNTRY/REGION</string>
    <string name="cko_error_country">Please select a country/region</string>
    <string name="cko_placeholder_address_one">Address line 1*</string>
...
    <string name="cko_error_state">Value must be longer then 3 characters</string>
    <string name="cko_placeholder_postcode">Postcode*</string>
    <string name="cko_error_postcode">Value must be longer then 3 characters</string>
    <string name="cko_placeholder_phone">Phone*</string>
    <string name="cko_error_phone">Value must be longer then 3 characters</string>
    <string name="cko_button_clear">Clear</string>
    <string name="cko_button_done">Done</string>
    <string name="cko_billing_details_edit">Edit</string>
</resources>

